[gd_scene load_steps=3 format=3 uid="uid://rr154c1ykwoh"]

[ext_resource type="PackedScene" uid="uid://yhuh0huitds8" path="res://example/TwitchChat.tscn" id="1_o6alc"]
[ext_resource type="Script" path="res://example/demo.gd" id="1_uj756"]

[node name="Demo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uj756")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ChannelName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "ChannelName"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="LoginLayout" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="LoginToken" type="Button" parent="VBoxContainer/HBoxContainer/LoginLayout"]
layout_mode = 2
text = "Get Token and Login Chat"

[node name="LoginAnon" type="Button" parent="VBoxContainer/HBoxContainer/LoginLayout"]
layout_mode = 2
text = "Login Anon"

[node name="LoggedInLayout" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="LogoutButton" type="Button" parent="VBoxContainer/HBoxContainer/LoggedInLayout"]
layout_mode = 2
text = "Logout"

[node name="ClearChar" type="Button" parent="VBoxContainer/HBoxContainer/LoggedInLayout"]
layout_mode = 2
text = "Clear chat"

[node name="TwitchChat" parent="VBoxContainer" instance=ExtResource("1_o6alc")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoginLayout/LoginToken" to="." method="login_token"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoginLayout/LoginAnon" to="." method="login_anon"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoggedInLayout/LogoutButton" to="." method="logout"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoggedInLayout/ClearChar" to="." method="clear_chat"]
